kubernetes/apps/security/pocket-id-operator/referencegrant.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/gateway.networking.k8s.io/referencegrant_v1beta1.json
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: pocket-id
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: ai
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: default
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: forgejo-system
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: home
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: media
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: observability
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: volsync-system
  to:
    - group: gateway.envoyproxy.io
      kind: Backend
