kubernetes/apps/security/pocket-id-operator/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: pocket-id-operator-egress-external
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: pocket-id-operator
    egress:
      - toFQDNs:
          - matchName: download.maxmind.com
          - matchPattern: mm-prod-geoip-databases.*.r2.cloudflarestorage.com
        toPorts:
          - ports:
              - port: "443"
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: pocket-id-operator-egress-label
specs:
  - endpointSelector:
      matchLabels:
        egress.cilium.io/auth: "true"
    egress:
      - toEndpoints:
          - matchLabels:
              app.kubernetes.io/name: pocket-id-operator
        toPorts:
          - ports:
              - port: "80"
      # via envoy, when pods use id.${ROOT_DOMAIN}
      - toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: network
              gateway.envoyproxy.io/owning-gateway-name: envoy-internal
        toPorts:
          - ports:
              - port: "10443"
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pocket-id-operator-egress-internal
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: pocket-id-operator
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/managed-by: pocket-id-operator
